# TraceDrivenSimulator

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  flake.nix  justfile
docs/: (0504)获取trace的方法.md  (050401)获取trace的方法.md  (050402)指令Trace结构定义.md  (050403)轨迹驱动的初代模拟器.md  (050404)从单周期到多周期.md  (050701)从多周期到流水线.md  (050702)重构设计.md  (050801)重新审视指令的结构.md  (050901)重新审视各阶段设计.md  (051101)重构后代码满足需求了吗.md  (051601)使用CPP重写该项目.md  (051701)重写后代码满足需求了吗.md  (051702)Trace能力与模块设计关联分析.md  (doing)从多周期到流水线.md
docs/assets/0507/: architecture.excalidraw  forwarding.excalidraw  load_use_stall.excalidraw  pipeline_flow.excalidraw
docs/resc/: (0504)关于TraceDriven能做到多少.md
include/: trace.h
include/simulator/: alu.h  exec_unit.h  hazard.h  latches.h  lsu.h  simulator.h
src/: lib.rs  main.cc  main.rs  simulator.rs  trace.cc  trace.rs
src/simulator/: alu.cc  alu.rs  core.rs  exec_unit.cc  exec_unit.rs  hazard.cc  hazard.rs  latches.cc  latches.rs  lsu.cc  lsu.rs  mod.rs  pipeline.rs  simulator.cc  tests.rs
test/: CMakeLists.txt  alu_test.cc  hazard_test.cc  simulator_test.cc
test_binary/: .gitignore  Makefile  baremetal.ld  crt0.S  parse_spike_log.py  test_c.c
